[tool.poetry]
name = "billzio-api"
version = "1.0.3"
description = "Python wrapper for Billz.io Public API"
authors = ["Sirojiddin Mustafayev"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "billzio_api"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.1"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
