[metadata]
name = billzio-api
description = Python wrapper for billz.io Public API
long_description_content_type = text/markdown
url = https://github.com/Botifi/billzio-api
project_urls =
    Bug Tracker = https://github.com/Botifi/billzio-api/issues
    Changelog = https://github.com/Botifi/billzio-api/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Intended Audience :: Developers

[options]
package_dir =
    = billzio_api
packages = find:
python_requires = >=3.6

[options.packages.find]
where = billzio_api